--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,8 +35,8 @@
                        aria-describedby="password">
             </div>
             <div class="form-check w-25 mx-auto my-3 text-start">
-                <input class="form-check-input" type="checkbox" value="" id="rememberme" checked>
-                <label class="form-check-label" for="rememberme">
+                <input class="form-check-input" type="checkbox" id="remember-me" name="remember-me" checked>
+                <label class="form-check-label" for="remember-me">
                     Remember me
                 </label>
             </div>
