--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,33 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body class="bg-light">
 <div class="card text-center w-25 mx-auto mt-5">
     <div class="card-body">
         <button type="button" class="btn btn-success mb-4">Pay My Buddy</button>
+        <div th:if="${message}">
+            <div class="alert alert-danger" role="alert">
+                <span data-th-text="${message}">Message</span>
+            </div>
+        </div>
         <form th:action="@{/registration}" method="post" th:object="${user}">
             <div class="input-group mb-3">
                 <span class="input-group-text" id="email"><i class="bi bi-envelope"></i></span>
-                <input type="email" th:field="*{email}" class="form-control" placeholder="Email" aria-label="Email"
-                       aria-describedby="email">
+                <input type="email" th:field="*{email}" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email">
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="password"><i class="bi bi-asterisk"></i></span>
-                <input type="password" th:field="*{password}" class="form-control" placeholder="Password" aria-label="Password"
-                       aria-describedby="password">
+                <input type="password" th:field="*{password}" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password">
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="firstname"><i class="bi bi-person-vcard"></i></i></span>
-                <input type="text" th:field="*{prenom}" class="form-control" placeholder="First name" aria-label="First name"
-                       aria-describedby="firstname">
+                <input type="text" th:field="*{prenom}" class="form-control" placeholder="First name" aria-label="First name" aria-describedby="firstname">
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="lastname"><i class="bi bi-person-vcard"></i></i></span>
-                <input type="text" th:field="*{nom}" class="form-control" placeholder="Last name" aria-label="Last name"
-                       aria-describedby="lastname">
+                <input type="text" th:field="*{nom}" class="form-control" placeholder="Last name" aria-label="Last name" aria-describedby="lastname">
             </div>
             <button type="submit" class="btn btn-primary mt-3">Register</button>
         </form>
