--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -20,10 +20,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
+                    <a class="nav-link" aria-current="page" th:href="@{/home}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/transfer}">Transfer</a>
+                    <a class="nav-link active" th:href="@{/transfer}">Transfer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/profile}">Profile</a>
@@ -40,7 +40,8 @@
 </nav>
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb bg-light p-3">
-        <li class="breadcrumb-item active"><a th:href="@{/home}">Home</a></li>
+        <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Transfer</li>
     </ol>
 </nav>
 
