--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,61 +45,116 @@
 </nav>
 
 <div class="container mx-auto w-75 m-3">
+    <div th:if="${param.error}">
+        <div class="alert alert-danger" role="alert">
+            <span>An error as occured. Please try later.</span>
+        </div>
+    </div>
+    <div th:if="${param.connectionAlreadyExist}">
+        <div class="alert alert-danger" role="alert">
+            <span>Email already in your contact list.</span>
+        </div>
+    </div>
+    <div th:if="${param.successConnection}">
+        <div class="alert alert-success" role="alert">
+            <span>Connection successfully added.</span>
+        </div>
+    </div>
+    <div th:if="${param.successPayment}">
+        <div class="alert alert-success" role="alert">
+            <span>Payment successfully sent.</span>
+        </div>
+    </div>
+    <div class="my-4">
+        <div class="p-2 text-center bg-body-tertiary">
+            <div class="container py-5">
+                <h1 class="text-body-emphasis" data-th-text="${ 'Hi ' + user.getPrenom() + ' !'}">Hello</h1>
+                <p class="col-lg-8 mx-auto lead">You actually have <strong class="text-primary"
+                                                                           th:text="${balance + '€'}">AMOUNT€</strong>
+                    on your
+                    Pay My Buddy account !</p>
+            </div>
+        </div>
+    </div>
     <div class="d-flex justify-content-between py-2">
         <h3>Send Money</h3>
-        <button class="btn btn-primary px-5">Add connection</button>
+        <p class="d-inline-flex gap-1">
+            <button class="btn btn-primary px-5" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseAddConnection" aria-expanded="false" aria-controls="collapseAddConnection">
+                Add
+                connection
+            </button>
+        </p>
     </div>
-    <div class="bg-light py-4 d-flex justify-content-around">
-        <select class="form-select w-25 mx-auto" aria-label="Default select example">
-            <option selected>Open this select menu</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-        </select>
-        <input type="number" class="form-control w-25 mx-auto" value="0" id="exampleFormControlInput1">
-        <button type="button" class="btn btn-success w-25 mx-auto">Pay</button>
+    <div class="collapse" id="collapseAddConnection">
+        <div class="card card-body mb-4">
+            <h5 class="mb-3">Add new contact</h5>
+            <form th:action="@{/addConnection}" method="post" class="row">
+                <div class="col">
+                    <div class="form-floating">
+                        <input type="email" class="form-control" id="addConnectionInput" name="connectionInput"
+                               placeholder="email@example.com">
+                        <label for="addConnectionInput">Your contact email</label>
+                    </div>
+                </div>
+                <div class="col-2 d-flex align-items-center">
+                    <button type="submit" class="btn btn-primary">Add new contact</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div>
+        <form th:action="@{/pay}" method="post" class="bg-light py-4 d-flex justify-content-around">
+            <select class="form-select w-auto mx-auto" name="contact" aria-label="Contact list">
+                <option selected value="">Select a contact</option>
+                <option th:each="contact : ${contacts}"
+                        th:value="${contact.getContact().getId()}"
+                        th:text="${contact.getContact().getPrenom() + ' ' +  contact.getContact().getNom()}">
+                    Contact
+                </option>
+            </select>
+            <div class="input-group w-auto mx-auto">
+                <input type="number" step="0.01" value="0" name="amount" class="form-control" placeholder="Amount to send"
+                       aria-label="Amount to send" aria-describedby="amount-to-send=">
+                <span class="input-group-text" id="amount-to-send=">€</span>
+            </div>
+            <input type="text" name="motif" class="form-control w-25 mx-auto" placeholder="Description"
+                   aria-label="Transaction motif">
+            <button type="submit" class="btn btn-success w-25 mx-auto">Pay</button>
+        </form>
     </div>
     <h3 class="mt-4 mb-3">My Transactions</h3>
-    <table class="table table-striped text-center">
+    <table class="table table-striped table-sm text-center">
         <thead>
         <tr class="table-success">
-            <th scope="col">Connections</th>
+            <th scope="col">Issuer</th>
+            <th scope="col">Receiver</th>
+            <th scope="col">Date</th>
             <th scope="col">Description</th>
             <th scope="col">Amount</th>
+            <th scope="col">Taxes</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Haley</td>
-            <td>Restaurant bill share</td>
-            <td>10e</td>
+        <tr th:if="${transactions.isEmpty()}">
+            <td colspan="5">No transaction found.</td>
         </tr>
-        <tr>
-            <td>Clara</td>
-            <td>Trip money</td>
-            <td>25e</td>
-        </tr>
-        <tr>
-            <td>Smith</td>
-            <td>Movie tickets</td>
-            <td>8e</td>
+        <tr th:if="${!transactions.isEmpty()}" th:each="transaction, iStat : ${transactions}">
+            <td th:text="${transaction.getIssuer().getUser().getPrenom()}"></td>
+            <td th:text="${transaction.getRecipient().getUser().getPrenom()}"></td>
+            <td th:text="${#temporals.format(transaction.getDate(), 'dd-MM-yyyy HH:mm')}"></td>
+            <td th:text="${transaction.getMotif()}"></td>
+            <td th:class="${transaction.getIssuer().getUser() == user ? 'text-danger' : 'text-success'}" th:text="${transaction.getIssuer().getUser() == user} ? '-' + ${transaction.getMontant()} + '€' : ${transaction.getMontant()} + '€'"></td>
+            <td th:class="${transaction.getIssuer().getUser() == user ? 'text-danger' : 'text-secondary'}" th:text="${transaction.getIssuer().getUser() == user} ? '-' + ${transaction.getFrais()} + '€' : ${transaction.getFrais()} + '€'"></td>
         </tr>
         </tbody>
     </table>
     <nav aria-label="Page navigation example mt-3">
         <ul class="pagination justify-content-center">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
+            <li th:each="pageNumber : ${#numbers.sequence(1, totalPages)}"
+                class="page-item"
+                th:classappend="${pageNumber - 1 == page ? 'active' : ''}">
+                <a class="page-link" th:href="@{/home(page=${pageNumber - 1})}" th:text="${pageNumber}"></a>
             </li>
         </ul>
     </nav>
