--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -44,40 +44,104 @@
         <li class="breadcrumb-item active" aria-current="page">Profile</li>
     </ol>
 </nav>
-<div class="container mx-auto w-50 m-3">
-    <h2>Profile</h2>
-    <div th:if="${param.success}">
+<div class="container mx-auto m-3">
+    <div th:if="${param.successProfile}">
         <div class="alert alert-success" role="alert">
             <span>Profile successfully edited.</span>
         </div>
     </div>
-    <div th:if="${message}">
-        <div class="alert alert-danger" role="alert">
-            <span data-th-text="${message}">Message</span>
+    <div th:if="${param.successIban}">
+        <div class="alert alert-success" role="alert">
+            <span>Bank account successfully edited.</span>
         </div>
     </div>
-    <form th:action="@{/profile}" method="post" th:object="${user}">
-        <div class="form-floating mb-3">
-            <input type="email" th:field="*{email}" class="form-control" placeholder="Email" aria-label="Email"
-                   aria-describedby="email" id="email">
-            <label for="email">Email</label>
+    <div th:if="${param.successPassword}">
+        <div class="alert alert-success" role="alert">
+            <span>Password successfully edited.</span>
         </div>
-        <!--        <div class="form-floating mb-3">-->
-        <!--            <input type="password" th:field="*{password}" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password" id="password">-->
-        <!--            <label for="password">Input with value</label>-->
-        <!--        </div>-->
-        <div class="form-floating mb-3">
-            <input type="text" th:field="*{prenom}" class="form-control" placeholder="First name"
-                   aria-label="First name" aria-describedby="firstname" id="firstname">
-            <label for="firstname">Firstname</label>
+    </div>
+    <div th:if="${param.error}">
+        <div class="alert alert-danger" role="alert">
+            <span>An error as occured. Please try later.</span>
         </div>
-        <div class="form-floating mb-3">
-            <input type="text" th:field="*{nom}" class="form-control" placeholder="Last name" aria-label="Last name"
-                   aria-describedby="lastname" id="lastname">
-            <label for="lastname">Lastname</label>
+    </div>
+    <div class="row">
+        <div class="col-2">
+            <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item d-grid gap-2" role="presentation">
+                    <button class="nav-link active" id="personal-info-tab" data-bs-toggle="tab"
+                            data-bs-target="#personal-info-edition-tab-pane" type="button" role="tab"
+                            aria-controls="personal-info-edition-tab-pane" aria-selected="true">Personnal informations
+                    </button>
+                </li>
+                <li class="nav-item d-grid gap-2" role="presentation">
+                    <button class="nav-link" id="bank-account-tab" data-bs-toggle="tab"
+                            data-bs-target="#bank-account-tab-pane" type="button" role="tab"
+                            aria-controls="bank-account-tab-pane" aria-selected="false">Bank account
+                    </button>
+                </li>
+                <li class="nav-item d-grid gap-2" role="presentation">
+                    <button class="nav-link" id="security-tab" data-bs-toggle="tab" data-bs-target="#security-tab-pane"
+                            type="button" role="tab" aria-controls="security-tab-pane"
+                            aria-selected="false">Security
+                    </button>
+                </li>
+            </ul>
         </div>
-        <button type="submit" class="btn btn-primary mt-3">Confirm profile edition</button>
-    </form>
+        <div class="col">
+            <div class="tab-content">
+                <div class="tab-pane fade show active" id="personal-info-edition-tab-pane" role="tabpanel"
+                     aria-labelledby="personal-info-tab" tabindex="0">
+                    <h2 class="mb-3">Personnal informations</h2>
+                    <form th:action="@{/profile/user}" method="post" th:object="${user}">
+                        <div class="form-floating mb-3">
+                            <input type="email" th:field="*{email}" class="form-control" placeholder="Email"
+                                   aria-label="Email" aria-describedby="email" id="email">
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" th:field="*{prenom}" class="form-control" placeholder="First name"
+                                   aria-label="First name" aria-describedby="firstname" id="firstname">
+                            <label for="firstname">First name</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="text" th:field="*{nom}" class="form-control" placeholder="Last name"
+                                   aria-label="Last name" aria-describedby="lastname" id="lastname">
+                            <label for="lastname">Last name</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-3">Edit profile</button>
+                    </form>
+                </div>
+                <div class="tab-pane fade" id="bank-account-tab-pane" role="tabpanel" aria-labelledby="bank-account-tab"
+                     tabindex="0">
+
+                    <h2 class="mb-3">Bank account</h2>
+                    <form th:action="@{/profile/bankAccount}" method="post" th:object="${user}">
+                        <div class="form-floating mb-3">
+                            <input type="text" th:field="*{compteBancaire.iban}" class="form-control"
+                                   placeholder="FR7630001007941234567890185" aria-label="Iban" aria-describedby="iban"
+                                   id="iban">
+                            <label for="iban">IBAN</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-3">Edit bank account</button>
+                    </form>
+                </div>
+                <div class="tab-pane fade" id="security-tab-pane" role="tabpanel" aria-labelledby="security-tab"
+                     tabindex="0">
+                    <h2 class="mb-3">Security</h2>
+                    <form th:action="@{/profile/passwordEdition}" method="post" th:object="${user}">
+                        <div class="form-floating mb-3">
+                            <input type="password" th:field="*{password}" class="form-control"
+                                   placeholder="New password" aria-label="Password" aria-describedby="password"
+                                   id="password" name="password">
+                            <label for="password">New password</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-3">Edit password</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
