--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -46,62 +46,70 @@
 </nav>
 
 <div class="container mx-auto w-75 m-3">
-    <div class="d-flex justify-content-between py-2">
-        <h3>Send Money</h3>
-        <button class="btn btn-primary px-5">Add connection</button>
+    <div th:if="${param.error}">
+        <div class="alert alert-danger" role="alert">
+            <span>An error as occured. Please try later.</span>
+        </div>
     </div>
-    <div class="bg-light py-4 d-flex justify-content-around">
-        <select class="form-select w-25 mx-auto" aria-label="Default select example">
-            <option selected>Open this select menu</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-        </select>
-        <input type="number" class="form-control w-25 mx-auto" value="0" id="exampleFormControlInput1">
-        <button type="button" class="btn btn-success w-25 mx-auto">Pay</button>
+    <div th:if="${param.successTransfer}">
+        <div class="alert alert-success" role="alert">
+            <span>Payment successfully sent.</span>
+        </div>
     </div>
-    <h3 class="mt-4 mb-3">My Transactions</h3>
-    <table class="table table-striped text-center">
+    <h1>Transfer</h1>
+    <div>
+        <div class="mt-4">
+            <div class="p-2 text-center bg-body-tertiary">
+                <div class="container py-3">
+                    <p class="col-lg-8 my-0 mx-auto lead">You actually have <strong class="text-primary"
+                                                                                    th:text="${balance + '€'}">AMOUNT€</strong>
+                        on your Pay My Buddy account !</p>
+                </div>
+            </div>
+        </div>
+        <form th:action="@{/transfer}" method="post" class="bg-light py-4 d-flex justify-content-around">
+            <select class="form-select w-25 mx-auto" name="type" aria-label="Type list">
+                <option selected disabled>Select an option</option>
+                <option value="OUT">SEND MONEY</option>
+                <option value="IN">GET MONEY</option>
+            </select>
+            <div class="input-group w-25 mx-auto">
+                <input type="number" step="0.01" value="0" name="amount" class="form-control" placeholder="Amount to send"
+                       aria-label="Amount to send" aria-describedby="amount-to-send=">
+                <span class="input-group-text" id="amount-to-send=">€</span>
+            </div>
+            <button type="submit" class="btn btn-success w-25 mx-auto">Transfer</button>
+        </form>
+    </div>
+    <h3 class="mt-4 mb-3">Transfer history</h3>
+    <table class="table table-striped table-sm text-center">
         <thead>
         <tr class="table-success">
-            <th scope="col">Connections</th>
-            <th scope="col">Description</th>
+            <th scope="col">Date</th>
             <th scope="col">Amount</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Haley</td>
-            <td>Restaurant bill share</td>
-            <td>10e</td>
+        <tr th:if="${virements.isEmpty()}">
+            <td colspan="3">No transfer found.</td>
         </tr>
-        <tr>
-            <td>Clara</td>
-            <td>Trip money</td>
-            <td>25e</td>
-        </tr>
-        <tr>
-            <td>Smith</td>
-            <td>Movie tickets</td>
-            <td>8e</td>
+        <tr th:if="${!virements.isEmpty()}" th:each="virement, iStat : ${virements}">
+            <td th:text="${#temporals.format(virement.getDate(), 'dd-MM-yyyy HH:mm')}"></td>
+            <td th:class="${virement.getType() == 'OUT' ? 'text-danger' : 'text-success'}"  th:text="${virement.getType() == 'OUT'} ? '-' + ${virement.getMontant()} + '€' : ${virement.getMontant()} + '€'"></td>
         </tr>
         </tbody>
     </table>
     <nav aria-label="Page navigation example mt-3">
         <ul class="pagination justify-content-center">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
+            <nav aria-label="Page navigation example mt-3">
+                <ul class="pagination justify-content-center">
+                    <li th:each="pageNumber : ${#numbers.sequence(1, totalPages)}"
+                        class="page-item"
+                        th:classappend="${pageNumber - 1 == page ? 'active' : ''}">
+                        <a class="page-link" th:href="@{/transfer(page=${pageNumber - 1})}" th:text="${pageNumber}"></a>
+                    </li>
+                </ul>
+            </nav>
         </ul>
     </nav>
 </div>
